fixed navbar-1 and logos in partners section

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
   <header class="mx-auto">
     <a class="medium-hide pl-4 bars-icon c-black" href="#"><i class="fas fa-bars"></i></a>
-    <nav class="navbar-1 d-flex d-md-flex d-lg-flex justify-content-end justify-content-lg-end bg-gray-medium">
+    <nav class="navbar-1  bg-gray-medium d-flex justify-content-end">
       <a class="pl-2 pr-2 c-white" href="#">
         <i class="fab fa-facebook-square"></i>
       </a>
@@ -24,13 +24,13 @@
       <a class="pl-2 pr-2 c-white" href="#">Logout</a>
     </nav>
 
-    <nav class="navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center">
+    <nav class="pt-2 pb-2 navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center c-black">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
-      <a class="navbar-item" href="#">About</a>
-      <a class="navbar-item" href="#">Program</a>
-      <a class="navbar-item" href="#">Join</a>
-      <a class="navbar-item" href="#">Sponsor</a>
-      <a class="navbar-item" href="#">News</a>
+      <a class="navbar-item c-black" href="#">About</a>
+      <a class="navbar-item c-black" href="#">Program</a>
+      <a class="navbar-item c-black" href="#">Join</a>
+      <a class="navbar-item c-black" href="#">Sponsor</a>
+      <a class="navbar-item c-black" href="#">News</a>
       <a class="navbar-item c-orange" href="#">CC Campaign</a>
     </nav>
   </header>
@@ -51,7 +51,7 @@
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="c-orange titles-program">Lecure</h4>
@@ -59,7 +59,7 @@
             </div>
           </div>
 
-          <div class="col-sm-12">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">CC Exhibition</h4>
@@ -67,7 +67,7 @@
             </div>
           </div>
 
-          <div class="col-sm-12">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">Forum</h4>
@@ -75,7 +75,7 @@
             </div>
           </div>
 
-          <div class="col-sm-12">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">Workshop</h4>
@@ -85,7 +85,7 @@
         </div>  
 
         <div class="row">
-          <div class="col-sm-12">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">CC Ignite</h4>
@@ -179,11 +179,11 @@
 
         <div class="container-fluid">
           <div class="row">
-            <img class="w-25 col-sm-3 mx-auto" src="images/mozilla-logo.png" alt="mozilla-logo">
-            <img class="w-25 col-sm-3 mx-auto" src="images/dji-logo.png" alt="dji-logo">
-            <img class="w-25 col-sm-3 mx-auto" src="images/google-logo.jpg" alt="google-logo">
-            <img class="w-25 col-sm-3 mx-auto" src="images/naver-logo.jpg" alt="naver-logo">
-            <img class="w-25 col-sm-3 mx-auto" src="images/toyota-logo.jpg" alt="toyota-logo">
+            <img class="pt-1 pb-1 w-25 col-sm-5 mx-auto" src="images/mozilla-1.svg" alt="mozilla-logo">
+            <img class="pt-1 pb-1 w-25 col-sm-5 mx-auto" src="images/logo-2.png" alt="dji-logo">
+            <img class="pt-1 pb-1 w-25 col-sm-4 mx-auto" src="images/logo-3.png" alt="google-logo">
+            <img class="pt-1 pb-1 w-25 h-75 col-sm-4 mx-auto" src="images/logo-4.png" alt="naver-logo">
+            <img class="pt-1 pb-1 w-25 h-25 col-sm-4 mx-auto" src="images/logo -5.png" alt="toyota-logo">
           </div>
         </div>  
 
