added style to main program section in desktop version

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
       <a class="pl-2 pr-2 c-white" href="#">Logout</a>
     </nav>
 
-    <nav class="pt-2 pb-2 navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center c-black">
+    <nav class="pt-2 pb-2 mb-4 navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center c-black border-bottom">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
       <a class="navbar-item c-black" href="#">About</a>
       <a class="navbar-item c-black" href="#">Program</a>
@@ -49,9 +49,10 @@
       <h2 class="c-white d-flex justify-content-center pb-1">Main Program</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
 
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <div class="row">
-          <div class="pt-2 pb-2 col-sm-12 col-md-6">
+          <div class="col-lg-1"></div>
+          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="c-orange titles-program">Lecure</h4>
@@ -59,7 +60,7 @@
             </div>
           </div>
 
-          <div class="pt-2 pb-2 col-sm-12 col-md-6">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">CC Exhibition</h4>
@@ -67,7 +68,7 @@
             </div>
           </div>
 
-          <div class="pt-2 pb-2 col-sm-12 col-md-6">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">Forum</h4>
@@ -75,25 +76,27 @@
             </div>
           </div>
 
-          <div class="pt-2 pb-2 col-sm-12 col-md-6">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">Workshop</h4>
               <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
             </div>
           </div>
-        </div>  
 
-        <div class="row">
-          <div class="pt-2 pb-2 col-sm-12 col-md-6">
+          <div class="pt-2 pb-2 col-sm-12 col-md-6 col-lg-2">
             <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
             <div class="card-body bg-medium-opacity">
               <h4 class="titles-program c-orange">CC Ignite</h4>
               <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
             </div>
           </div>
+        </div>  
 
-        </div>
+        <!-- <div class="row"> -->
+          
+
+        <!-- </div> -->
       </div>
 
       <button type="submit" class="c-white bg-orange border-0 d-flex mx-auto mt-4 p-4 button-program">Join CC Global Summit 2021</button>
