fixed padding in speakers section in desktop version

--- a/main.html
+++ b/main.html
@@ -95,8 +95,8 @@
 
         <!-- <div class="row"> -->
           
-
         <!-- </div> -->
+
       </div>
 
       <button type="submit" class="c-white bg-orange border-0 d-flex mx-auto mt-4 p-4 button-program">Join CC Global Summit 2021</button>
@@ -110,7 +110,7 @@
       <h2 class="d-flex justify-content-center pb-1">Feature Speakers</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
 
-      <article class="media">
+      <article class="media pb-2">
         <img class="img-fluid w-25 mr-2" src="images/andrea.jpg" alt="speaker-1">
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
@@ -120,7 +120,7 @@
         </div>
       </article>
 
-      <article class="media">
+      <article class="media pb-2">
         <img class="img-fluid w-25 mr-2" src="images/profile-1.jpg" alt="speaker-1">
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
@@ -130,7 +130,7 @@
         </div>
       </article>
 
-      <article class="media">
+      <article class="media pb-2">
         <img class="img-fluid w-25 mr-2" src="images/profile-2.jpg" alt="speaker-1">
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
@@ -140,7 +140,7 @@
         </div>
       </article>
 
-      <article class="media">
+      <article class="media pb-2">
         <img class="img-fluid w-25 mr-2" src="images/profile-3.jpg" alt="speaker-1">
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
@@ -150,7 +150,7 @@
         </div>
       </article>
 
-      <article class="media">
+      <article class="media pb-2">
         <img class="img-fluid w-25 mr-2" src="images/profile-4.jpg" alt="speaker-1">
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
@@ -160,7 +160,7 @@
         </div>
       </article>
 
-      <article class="media">
+      <article class="media pb-2">
         <img class="img-fluid w-25 mr-2" src="images/sergio-de-paula.jpg" alt="speaker-1">
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
