added html structure of about page

--- a/main.html
+++ b/main.html
@@ -27,11 +27,8 @@
     <nav class="pt-2 pb-2 mb-4 navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center c-black border-bottom">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
       <a class="navbar-item c-black" href="#">About</a>
-      <a class="navbar-item c-black" href="#">Program</a>
-      <a class="navbar-item c-black" href="#">Join</a>
-      <a class="navbar-item c-black" href="#">Sponsor</a>
-      <a class="navbar-item c-black" href="#">News</a>
-      <a class="navbar-item c-orange" href="#">CC Campaign</a>
+      <a class="navbar-item c-black" href="#">Main</a>
+      <a class="navbar-item c-orange font-weight-bolder" href="#">Tickets</a>
     </nav>
   </header>
 
@@ -182,11 +179,11 @@
 
         <div class="container-fluid">
           <div class="row">
-            <img class="pt-1 pb-1 w-25 col-sm-5 mx-auto" src="images/mozilla-1.svg" alt="mozilla-logo">
-            <img class="pt-1 pb-1 w-25 col-sm-5 mx-auto" src="images/logo-2.png" alt="dji-logo">
-            <img class="pt-1 pb-1 w-25 col-sm-4 mx-auto" src="images/logo-3.png" alt="google-logo">
-            <img class="pt-1 pb-1 w-25 h-75 col-sm-4 mx-auto" src="images/logo-4.png" alt="naver-logo">
-            <img class="pt-1 pb-1 w-25 h-25 col-sm-4 mx-auto" src="images/logo -5.png" alt="toyota-logo">
+            <img class="pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/mozilla-1.svg" alt="mozilla-logo">
+            <img class="pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/logo-2.png" alt="dji-logo">
+            <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-3.png" alt="google-logo">
+            <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-4.png" alt="naver-logo">
+            <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-5.png" alt="toyota-logo">
           </div>
         </div>  
 
@@ -197,7 +194,7 @@
   </main>
 
   <footer class="d-flex container-fluid justify-content-between">
-    <img class="w-50 h-50 mr-2" src="images/logo-event.png" alt="event-logo">
+    <img class="logo-footer mr-2" src="images/logo-event.png" alt="event-logo">
     <div>
       <p>2021 Creative Common Korea. Rights Reserved.</p>
       <p>Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
