--- a/about.html
+++ b/about.html
@@ -80,11 +80,11 @@
 
   </main>
 
-  <footer class="pt-5 pl-3 bg-gray-medium d-flex container-fluid justify-content-between">
+  <footer class="pt-5 pl-5 bg-gray-medium d-flex container-fluid justify-content-between">
     <img class="logo-footer mr-4" src="images/logo-event.png" alt="event-logo">
     <div>
-      <p class="c-white">2021 Creative Common Korea. Rights Reserved.</p>
-      <p class="c-white">Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
+      <p class="c-white font-f-2">2021 Creative Common Korea. Rights Reserved.</p>
+      <p class="c-white font-f-2">Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
     </div>
   </footer>
   
