added style to past event section and links to other pages

--- a/main.html
+++ b/main.html
@@ -26,9 +26,9 @@
 
     <nav class="pt-2 pb-2 mb-4 navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center c-black border-bottom">
       <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
-      <a class="navbar-item c-black" href="#">About</a>
+      <a class="navbar-item c-black" href="about.html">About</a>
       <a class="navbar-item c-black" href="#">Main</a>
-      <a class="navbar-item c-orange font-weight-bolder" href="#">Tickets</a>
+      <a class="navbar-item c-orange font-weight-bolder" href="tickets.html">Tickets</a>
     </nav>
   </header>
 
