added style to tickets page form and footer on desktop version

--- a/tickets.html
+++ b/tickets.html
@@ -32,128 +32,81 @@
     </nav>
   </header>
 
-  <main class="">
+  <main>
 
     <section class="main-section mt-4 pt-5 pb-4 mb-5">
 
       <h2 class="c-black d-flex justify-content-center pb-1">Select Tickets</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
-      <p class="text-center c-black border ml-5 mr-5 border-dark border-radius rounded"><span class="c-orange font-weight-bold"><i class="far fa-caret-square-right"></i> SETP 1 </span>  Please select the day when you want to join CC Global Summit 2021</p>
+      <p class="text-center c-black border ml-5 mr-5 border-dark border-radius rounded"><span class="c-orange font-weight-bold"><i class="far fa-caret-square-right"></i> STEP 1 </span>  Please select the day when you want to join CC Global Summit 2021</p>
 
-      <div class="container-fluid ">
+      <div class="container-fluid smaller-none">
         <div class="row">
-          <form action="/" id="desktop-form" class="col-md-11 col-lg-11">
 
-            <div class="col-md-1"></div>
-            <div></div>
+          <div class="col-md-1 col-lg-1"></div>
 
-          </form>
+          <p class="col-md-2 col-lg-2 border">Tickets</p>
+          <p class="col-md-2 col-lg-2 border ">1-Day-Tickets</p>
+          <p class="col-md-4 col-lg-4 border ">2-Day-Tickets</p>
+          <p class="col-md-2 col-lg-2 border ">CC Affiliate</p>
+
         </div>
+        <div class="row">
+          <div class="col-md-1 col-lg-1"></div>
+
+          <p class="col-md-2 col-lg-2 border">Date</p>
+          <p class="col-md-2 col-lg-2 border">15.Oct</p>
+          <p class="col-md-2 col-lg-2 border">16.Oct</p>
+          <p class="col-md-2 col-lg-2 border">15-16.Oct</p>
+          <p class="col-md-2 col-lg-2 border">15-16.Oct</p>
+        </div>
+
+        <div class="row">
+          <form action="/" id="desktop-form"></form>
+          <div class="col-md-1 col-lg-1"></div>
+
+          <p class="col-md-2 col-lg-2 border">Normal</p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 200.00 <input type="checkbox" ></p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 200.00 <input type="checkbox" ></p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 400.00 <input type="checkbox" ></p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 0.00 <input type="checkbox" ></p>
+        </div>
+
+        <div class="row">
+          <form action="/" id="desktop-form"></form>
+          <div class="col-md-1 col-lg-1"></div>
+
+          <p class="col-md-2 col-lg-2 border">Student</p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 100.00 <input type="checkbox" ></p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 100.00 <input type="checkbox" ></p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 200.00 <input type="checkbox" ></p>
+          <p class="col-md-2 col-lg-2 border c-orange font-weight-bold">$ 0.00 <input type="checkbox" ></p>
+
+        </div>
+
       </div>
 
-
-      <button type="submit" class="c-white bg-orange border-0 d-flex mx-auto mt-4 p-4 button-program">Join CC Global Summit 2021</button>
-      
-      <h3 class="smaller-none">SEE THE WHOLE Program</h3>
     </section>
 
 
-    <section class="feature-section container-fluid">
+    <section class="feature-section container-fluid mb-5">
 
-      <h2 class="d-flex justify-content-center pb-1">Feature Speakers</h2>
+      <h2 class="d-flex justify-content-center pb-1">Select Your Lunch</h2>
       <div class="border-orange d-flex mx-auto mb-5"></div>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/andrea.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4 d-flex"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+      <p class="text-center c-black border ml-5 mr-5 border-dark border-radius rounded"><span class="c-orange font-weight-bold"><i class="far fa-caret-square-right"></i> STEP 2 </span>  Please select the day when you want to join CC Global Summit 2021</p>
 
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-1.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
-
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-2.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
-
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-3.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
-
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/profile-4.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
-
-      <article class="media pb-2">
-        <img class="img-fluid w-25 mr-2" src="images/sergio-de-paula.jpg" alt="speaker-1">
-        <div class="media-body">
-          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
-          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
-          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
-        </div>
-      </article>
+      <button type="submit" class="c-white bg-orange border-0 d-flex mx-auto mt-4 p-4 button-program">Proceed with Payment</button>
     </section>
 
-
-    <section class="partner-section bg-medium-opacity mt-4 pt-5 pb-4 mb-5">
-      
-      <article class="d-flex flex-column mx-auto">
-        <div>
-          <h3 class="d-flex justify-content-center pb-1">Partner</h3>
-          <div class="border-orange d-flex mx-auto mb-5"></div>
-        </div>
-
-        <div class="container-fluid">
-          <div class="row">
-            <img class="pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/mozilla-1.svg" alt="mozilla-logo">
-            <img class="pt-1 pb-1 partner-img col-sm-5 mx-auto" src="images/logo-2.png" alt="dji-logo">
-            <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-3.png" alt="google-logo">
-            <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-4.png" alt="naver-logo">
-            <img class="pt-1 pb-1 partner-img col-sm-4 mx-auto" src="images/logo-5.png" alt="toyota-logo">
-          </div>
-        </div>  
-
-      </article>
-
-    </section>
 
   </main>
 
-  <footer class="d-flex container-fluid justify-content-between">
+  <footer class="d-flex container-fluid justify-content-between pt-5 mt-5 bg-gray-medium">
     <img class="logo-footer mr-2" src="images/logo-event.png" alt="event-logo">
     <div>
-      <p>2021 Creative Common Korea. Rights Reserved.</p>
-      <p>Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
+      <p class="c-white">2021 Creative Common Korea. Rights Reserved.</p>
+      <p class="c-white">Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
     </div>
   </footer>
   
